syntax = "proto3";

option go_package = "./userpb";

message User {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string city = 7;
  string state = 8;
  string country = 9;
  string zip_code = 10;
  string gender = 11;
  string username = 12;
  string password_hash = 13;
  string profile_picture_url = 14;
  string bio = 15;
  bool is_active = 16;
  bool is_verified = 17;
  bool is_banned = 18;
  int32 followers_count = 19;
  int32 following_count = 20;
  int32 posts_count = 21;
  int32 likes_count = 22;
  int32 comments_count = 23;
  int32 shares_count = 24;
  string website_url = 25;
  string company = 26;
  string job_title = 27;
  string education = 28;
  string hometown = 29;
  string relationship_status = 30;
  string interests = 31;
  string languages_spoken = 32;
  string timezone = 33;
  string created_at = 34;
  string updated_at = 35;
  repeated string skills = 36;
  repeated string hobbies = 37;
  repeated string favorite_books = 38;
  repeated string favorite_movies = 39;
  repeated string favorite_music = 40;
  repeated string favorite_foods = 41;
  repeated string visited_countries = 42;
  repeated string certifications = 43;
  bool has_premium = 44;
  bool two_factor_enabled = 45;
  string last_login = 46;
  string last_ip = 47;
  int32 login_attempts = 48;
  bool email_notifications_enabled = 49;
  bool sms_notifications_enabled = 50;
  bool push_notifications_enabled = 51;
  string theme_preference = 52;
  string locale = 53;
  string currency = 54;
  double account_balance = 55;
  double lifetime_earnings = 56;
  double lifetime_spent = 57;
  repeated string devices = 58;
  repeated string session_tokens = 59;
  repeated string security_questions = 60;
  repeated string blocked_users = 61;
  repeated string muted_users = 62;
  repeated string favorite_posts = 63;
  repeated string saved_posts = 64;
  bool marketing_opt_in = 65;
  bool beta_program_opt_in = 66;
  string referral_code = 67;
  string referred_by = 68;
  repeated string referred_users = 69;
  bool admin_access = 70;
  bool moderator_access = 71;
  repeated string assigned_groups = 72;
  repeated string created_groups = 73;
  repeated string joined_groups = 74;
  repeated string events_attending = 75;
  repeated string events_hosting = 76;
  repeated string awards = 77;
  repeated string badges = 78;
  repeated string recent_searches = 79;
  repeated string recent_views = 80;
  repeated string wishlist_items = 81;
  repeated string purchased_items = 82;
  repeated string cart_items = 83;
  repeated string order_history = 84;
  repeated string subscriptions = 85;
  repeated string playlists = 86;
  repeated string favorite_artists = 87;
  repeated string favorite_authors = 88;
  repeated string favorite_places = 89;
  repeated string pets = 90;
  repeated string family_members = 91;
  repeated string emergency_contacts = 92;
  repeated string insurance_policies = 93;
  repeated string medical_records = 94;
  repeated string vehicles = 95;
  repeated string properties_owned = 96;
  repeated string investments = 97;
  repeated string bank_accounts = 98;
  repeated string credit_cards = 99;
  repeated string loans = 100;
}
